Fix map: add padding-top to avoid being overlapped by header section

--- a/src/styles/components/location.scss
+++ b/src/styles/components/location.scss
@@ -2,7 +2,9 @@
     background-color: var(--color-primary);
 
     @include media('<=tablet') {
-        height: calc(100vh - 20.625rem);
+        background-color: var(--color-white);
+        padding-top: var(--mobile-height);
+        height: calc(100vh - 15rem);
     }
 
     &__map {
